iac/terraform/modules/vpc/main.tf
resource "aws_vpc" "edsys_vpc" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"
}

resource "aws_subnet" "public" {
  count = length(var.public_cidr)
  vpc_id = aws_vpc.edsys_vpc.id
  cidr_block = element(var.public_cidr,count.index)
  availability_zone = element(var.azs,count.index)
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-${count.index+1}"
  }
}

resource "aws_subnet" "app" {
  count = length(var.app_cidr)
  vpc_id = aws_vpc.edsys_vpc.id
  cidr_block = element(var.app_cidr,count.index)
  availability_zone = element(var.azs,count.index)
  map_public_ip_on_launch = true
  tags = {
    Name = "app-subnet-${count.index+1}"
  }
}

resource "aws_subnet" "db" {
  count = length(var.db_cidr)
  vpc_id = aws_vpc.edsys_vpc.id
  cidr_block = element(var.db_cidr,count.index)
  availability_zone = element(var.db_azs,count.index)
  map_public_ip_on_launch = true
  tags = {
    Name = "db-subnet-${count.index+1}"
  }
}

resource "aws_internet_gateway" "edsys_vpc_igw" {
  vpc_id = aws_vpc.edsys_vpc.id

}

resource "aws_eip" "nat_eip" {}

resource "aws_nat_gateway" "edsys_nat_gwy" {
  subnet_id     = aws_subnet.public[0].id
  allocation_id = aws_eip.nat_eip.id
  depends_on = [aws_internet_gateway.edsys_vpc_igw, aws_eip.nat_eip]
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.edsys_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.edsys_vpc_igw.id
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.edsys_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.edsys_nat_gwy.id
  }
}

resource "aws_route_table_association" "public" {
  count = length(var.public_cidr)
  subnet_id      = element(aws_subnet.public.*.id,count.index)
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "private" {
  count = length(var.public_cidr)
  subnet_id      = element(aws_subnet.app.*.id,count.index)
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_security_group" "lambda_sg" {
  name        = "lambda-vpc-access"
  description = "associated with lambda function"
  vpc_id      = aws_vpc.edsys_vpc.id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ec2" {
  name        = "internet_out"
  description = "Allow outbound to internet"
  vpc_id      = aws_vpc.edsys_vpc.id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "db_mysql" {
  name        = "allow_mysql"
  description = "Allow mysql inbound traffic"
  vpc_id      = aws_vpc.edsys_vpc.id

  ingress {
    description      = "mysql from private subnets"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    cidr_blocks      = var.app_cidr
  }
  
    ingress {
    description      = "mysql from lambda sg"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    security_groups      = [aws_security_group.lambda_sg.id]
  }
  

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

}
